--- a/ContactList/Storyboards/Base.lproj/Main.storyboard
+++ b/ContactList/Storyboards/Base.lproj/Main.storyboard
@@ -48,7 +48,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xK0-K4-JE4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-75" y="798"/>
+            <point key="canvasLocation" x="1407" y="-258"/>
         </scene>
         <!--FullName-->
         <scene sceneID="qqh-l6-dA5">
@@ -110,7 +110,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JO2-yG-irI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-75" y="1546"/>
+            <point key="canvasLocation" x="2329" y="-258"/>
         </scene>
         <!--Detailed Contact List View Controller-->
         <scene sceneID="L9a-5m-K9k">
@@ -139,7 +139,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L56-ni-X8T" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="672" y="798"/>
+            <point key="canvasLocation" x="1406" y="443"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Add-vB-Xlj">
@@ -163,10 +163,11 @@
         <!--Contact Lists-->
         <scene sceneID="gly-3J-KZc">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="a1O-iN-KIG" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="a1O-iN-KIG" customClass="TabBarViewController" customModule="ContactList" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Contact Lists" id="oOO-zj-kPl"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="BmO-dh-UgY">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
@@ -177,7 +178,7 @@
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="84n-Wi-jg7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="247.82608695652175" y="89.732142857142847"/>
+            <point key="canvasLocation" x="468" y="90"/>
         </scene>
     </scenes>
     <resources>
